fixes Select options overflow

--- a/src/styles/theme-kbc-react-select.less
+++ b/src/styles/theme-kbc-react-select.less
@@ -8,3 +8,7 @@
 .Select-input {
   width: 100%;
 }
+
+.Select-option {
+    word-wrap: break-word;
+}
